# RendererGoBrrr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SRGB.sln
SRGB/: CMakeLists.txt  SRGB.vcxproj  SRGB.vcxproj.filters
SRGB/src/: Application.cpp  Application.h  Buffer.h  Camera.h  InputHandler.cpp  InputHandler.h  Light.h  Material.h  Matrix4.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OBJLoader.h  OBJ_loader.cpp  OBJ_loader.h  Profiler.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.h  Texture.cpp  Texture.h  Vector3.h  Window.cpp  Window.h  main.cpp
